reviews when not logged in

--- a/public/html/reviews.html
+++ b/public/html/reviews.html
@@ -5,7 +5,10 @@
     <title>Reviews</title>
 </head>
 <body>
-
+    <header>Reviews</header>
+    <ul id="reviewsList"></ul>
+    <div id="review"></div>
+    <a href="/" id="homeLink">Return to Home</a>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
     crossorigin="anonymous"></script>
     <script type="text/javascript" src="public/js/index.js"></script>
