--- a/public/html/reviews.html
+++ b/public/html/reviews.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Reviews</title>
+    <link rel="stylesheet" href="public/css/review.css">
 </head>
 <body>
     <header>Reviews</header>
